--- a/태양열 발전량 예측/[베이스라인]_LGBM 을 사용한 태양광 발전량 예측 (수정된 버전).ipynb
+++ b/태양열 발전량 예측/[베이스라인]_LGBM 을 사용한 태양광 발전량 예측 (수정된 버전).ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T13:16:14.186323Z",
-     "start_time": "2020-12-27T13:16:14.181546Z"
+     "end_time": "2020-12-27T15:32:06.566122Z",
+     "start_time": "2020-12-27T15:32:06.554153Z"
     }
    },
    "outputs": [],
@@ -30,16 +30,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 122,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T13:16:14.590223Z",
-     "start_time": "2020-12-27T13:16:14.503456Z"
+     "end_time": "2020-12-27T15:32:07.355023Z",
+     "start_time": "2020-12-27T15:32:07.269242Z"
     }
    },
    "outputs": [],
    "source": [
     "train = pd.read_csv('train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:32:18.982498Z",
+     "start_time": "2020-12-27T15:32:18.974550Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a=train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:32:46.080872Z",
+     "start_time": "2020-12-27T15:32:46.012886Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    52560.000000\n",
+      "mean       547.000000\n",
+      "std        316.102148\n",
+      "min          0.000000\n",
+      "25%        273.000000\n",
+      "50%        547.000000\n",
+      "75%        821.000000\n",
+      "max       1094.000000\n",
+      "Name: Day, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean        11.500000\n",
+      "std          6.922252\n",
+      "min          0.000000\n",
+      "25%          5.750000\n",
+      "50%         11.500000\n",
+      "75%         17.250000\n",
+      "max         23.000000\n",
+      "Name: Hour, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean        15.000000\n",
+      "std         15.000143\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%         15.000000\n",
+      "75%         30.000000\n",
+      "max         30.000000\n",
+      "Name: Minute, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean        64.344121\n",
+      "std        103.897125\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%         87.000000\n",
+      "max        528.000000\n",
+      "Name: DHI, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean       234.792371\n",
+      "std        349.684583\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%        469.000000\n",
+      "max       1059.000000\n",
+      "Name: DNI, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean         2.456033\n",
+      "std          1.426874\n",
+      "min          0.000000\n",
+      "25%          1.400000\n",
+      "50%          2.200000\n",
+      "75%          3.200000\n",
+      "max         12.000000\n",
+      "Name: WS, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean        56.793102\n",
+      "std         22.052875\n",
+      "min          7.590000\n",
+      "25%         39.697500\n",
+      "50%         57.600000\n",
+      "75%         72.770000\n",
+      "max        100.000000\n",
+      "Name: RH, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean         9.279928\n",
+      "std         10.179741\n",
+      "min        -19.000000\n",
+      "25%          1.000000\n",
+      "50%          9.000000\n",
+      "75%         17.000000\n",
+      "max         35.000000\n",
+      "Name: T, dtype: float64\n",
+      "count    52560.000000\n",
+      "mean        17.790630\n",
+      "std         25.759955\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%         32.089890\n",
+      "max         99.913939\n",
+      "Name: TARGET, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in a:\n",
+    "    print(train[i].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:28:31.188984Z",
+     "start_time": "2020-12-27T15:28:31.076282Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 52560 entries, 0 to 52559\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Day     52560 non-null  int64  \n",
+      " 1   Hour    52560 non-null  int64  \n",
+      " 2   Minute  52560 non-null  int64  \n",
+      " 3   DHI     52560 non-null  int64  \n",
+      " 4   DNI     52560 non-null  int64  \n",
+      " 5   WS      52560 non-null  float64\n",
+      " 6   RH      52560 non-null  float64\n",
+      " 7   T       52560 non-null  int64  \n",
+      " 8   TARGET  52560 non-null  float64\n",
+      "dtypes: float64(3), int64(6)\n",
+      "memory usage: 3.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
    ]
   },
   {
@@ -9134,16 +9288,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 107,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:16:37.737450Z",
+     "start_time": "2020-12-27T15:16:37.725476Z"
+    }
+   },
    "outputs": [],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:16:39.664579Z",
+     "start_time": "2020-12-27T15:16:39.655602Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48        0\n",
+       "49        0\n",
+       "50        1\n",
+       "51        1\n",
+       "52        2\n",
+       "         ..\n",
+       "52555    21\n",
+       "52556    22\n",
+       "52557    22\n",
+       "52558    23\n",
+       "52559    23\n",
+       "Name: Hour, Length: 52512, dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:19:38.483983Z",
+     "start_time": "2020-12-27T15:19:38.473013Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "temp = df_train[['Target1','Target2']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:19:42.706442Z",
+     "start_time": "2020-12-27T15:19:42.687875Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Target1</th>\n",
+       "      <th>Target2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52555</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52556</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52557</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52558</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52559</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>52512 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Target1  Target2\n",
+       "48         0.0      0.0\n",
+       "49         0.0      0.0\n",
+       "50         0.0      0.0\n",
+       "51         0.0      0.0\n",
+       "52         0.0      0.0\n",
+       "...        ...      ...\n",
+       "52555      0.0      0.0\n",
+       "52556      0.0      0.0\n",
+       "52557      0.0      0.0\n",
+       "52558      0.0      0.0\n",
+       "52559      0.0      0.0\n",
+       "\n",
+       "[52512 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 117,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:29:59.376668Z",
+     "start_time": "2020-12-27T15:29:59.350738Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 3888 entries, 288 to 335\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Hour           3888 non-null   int64  \n",
+      " 1   TARGET_lag_48  3888 non-null   float64\n",
+      " 2   DHI_lag_48     3888 non-null   float64\n",
+      " 3   DNI_lag_48     3888 non-null   float64\n",
+      " 4   WS_lag_48      3888 non-null   float64\n",
+      " 5   RH_lag_48      3888 non-null   float64\n",
+      " 6   T_lag_48       3888 non-null   float64\n",
+      "dtypes: float64(6), int64(1)\n",
+      "memory usage: 307.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-27T15:31:06.821669Z",
+     "start_time": "2020-12-27T15:31:06.801723Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    52560.000000\n",
+       "mean        11.500000\n",
+       "std          6.922252\n",
+       "min          0.000000\n",
+       "25%          5.750000\n",
+       "50%         11.500000\n",
+       "75%         17.250000\n",
+       "max         23.000000\n",
+       "Name: Hour, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
