--- a/태양열 발전량 예측/[베이스라인]_LGBM 을 사용한 태양광 발전량 예측.ipynb
+++ b/태양열 발전량 예측/[베이스라인]_LGBM 을 사용한 태양광 발전량 예측.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:57.924144Z",
-     "start_time": "2020-12-27T14:33:57.196751Z"
+     "end_time": "2021-01-09T07:17:30.305346Z",
+     "start_time": "2021-01-09T07:17:29.237202Z"
     }
    },
    "outputs": [],
@@ -33,8 +33,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.016877Z",
-     "start_time": "2020-12-27T14:33:57.925110Z"
+     "end_time": "2021-01-09T07:17:30.379122Z",
+     "start_time": "2021-01-09T07:17:30.309308Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.060750Z",
-     "start_time": "2020-12-27T14:33:58.022851Z"
+     "end_time": "2021-01-09T07:17:30.421009Z",
+     "start_time": "2021-01-09T07:17:30.380165Z"
     }
    },
    "outputs": [
@@ -267,8 +267,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.092662Z",
-     "start_time": "2020-12-27T14:33:58.062742Z"
+     "end_time": "2021-01-09T07:17:30.456988Z",
+     "start_time": "2021-01-09T07:17:30.425999Z"
     }
    },
    "outputs": [],
@@ -281,8 +281,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.133017Z",
-     "start_time": "2020-12-27T14:33:58.094659Z"
+     "end_time": "2021-01-09T07:17:30.485851Z",
+     "start_time": "2021-01-09T07:17:30.459912Z"
     }
    },
    "outputs": [
@@ -419,8 +419,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.366398Z",
-     "start_time": "2020-12-27T14:33:58.142992Z"
+     "end_time": "2021-01-09T07:17:30.611531Z",
+     "start_time": "2021-01-09T07:17:30.488827Z"
     }
    },
    "outputs": [
@@ -1187,8 +1187,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.427229Z",
-     "start_time": "2020-12-27T14:33:58.373373Z"
+     "end_time": "2021-01-09T07:17:30.640430Z",
+     "start_time": "2021-01-09T07:17:30.613496Z"
     }
    },
    "outputs": [
@@ -1871,8 +1871,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.499041Z",
-     "start_time": "2020-12-27T14:33:58.433213Z"
+     "end_time": "2021-01-09T07:17:30.680318Z",
+     "start_time": "2021-01-09T07:17:30.653425Z"
     }
    },
    "outputs": [
@@ -2555,8 +2555,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.558878Z",
-     "start_time": "2020-12-27T14:33:58.511005Z"
+     "end_time": "2021-01-09T07:17:30.834929Z",
+     "start_time": "2021-01-09T07:17:30.816953Z"
     }
    },
    "outputs": [
@@ -2687,8 +2687,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:33:58.580819Z",
-     "start_time": "2020-12-27T14:33:58.563866Z"
+     "end_time": "2021-01-09T07:17:30.967555Z",
+     "start_time": "2021-01-09T07:17:30.959571Z"
     }
    },
    "outputs": [],
@@ -2704,11 +2704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:18.457165Z",
-     "start_time": "2020-12-27T14:34:18.419267Z"
+     "end_time": "2021-01-09T07:17:31.144076Z",
+     "start_time": "2021-01-09T07:17:31.117147Z"
     }
    },
    "outputs": [
@@ -2912,7 +2912,7 @@
        "[52512 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2923,11 +2923,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:44.056299Z",
-     "start_time": "2020-12-27T14:34:44.038347Z"
+     "end_time": "2021-01-09T07:17:31.273740Z",
+     "start_time": "2021-01-09T07:17:31.260766Z"
     }
    },
    "outputs": [],
@@ -2940,11 +2940,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.109412Z",
-     "start_time": "2020-12-27T14:34:46.582580Z"
+     "end_time": "2021-01-09T07:17:32.628137Z",
+     "start_time": "2021-01-09T07:17:31.403385Z"
     }
    },
    "outputs": [
@@ -2954,7 +2954,7 @@
        "(3888, 7)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2974,11 +2974,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.137369Z",
-     "start_time": "2020-12-27T14:34:48.110413Z"
+     "end_time": "2021-01-09T07:17:32.648087Z",
+     "start_time": "2021-01-09T07:17:32.629107Z"
     }
    },
    "outputs": [
@@ -3158,7 +3158,7 @@
        "[3888 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3176,11 +3176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.151302Z",
-     "start_time": "2020-12-27T14:34:48.142329Z"
+     "end_time": "2021-01-09T07:17:32.656036Z",
+     "start_time": "2021-01-09T07:17:32.650051Z"
     }
    },
    "outputs": [],
@@ -3200,11 +3200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.178230Z",
-     "start_time": "2020-12-27T14:34:48.160277Z"
+     "end_time": "2021-01-09T07:17:32.672989Z",
+     "start_time": "2021-01-09T07:17:32.660024Z"
     }
    },
    "outputs": [
@@ -3296,7 +3296,7 @@
        "292     2            0.0        1.7      52.63      -5.5         0.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3307,11 +3307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.195184Z",
-     "start_time": "2020-12-27T14:34:48.180224Z"
+     "end_time": "2021-01-09T07:17:32.686953Z",
+     "start_time": "2021-01-09T07:17:32.677976Z"
     }
    },
    "outputs": [
@@ -3321,7 +3321,7 @@
        "45"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3332,11 +3332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.245052Z",
-     "start_time": "2020-12-27T14:34:48.196181Z"
+     "end_time": "2021-01-09T07:17:32.733853Z",
+     "start_time": "2021-01-09T07:17:32.689944Z"
     }
    },
    "outputs": [
@@ -3828,7 +3828,7 @@
        "291     1            0.0        1.0      66.32      10.6         0.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3839,11 +3839,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:48.297908Z",
-     "start_time": "2020-12-27T14:34:48.277961Z"
+     "end_time": "2021-01-09T07:17:32.751778Z",
+     "start_time": "2021-01-09T07:17:32.734824Z"
     }
    },
    "outputs": [
@@ -3954,7 +3954,7 @@
        "52         0.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3965,11 +3965,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.413840Z",
-     "start_time": "2020-12-27T14:34:48.462710Z"
+     "end_time": "2021-01-09T07:17:34.691632Z",
+     "start_time": "2021-01-09T07:17:32.799655Z"
     }
    },
    "outputs": [],
@@ -3981,11 +3981,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.436752Z",
-     "start_time": "2020-12-27T14:34:50.414824Z"
+     "end_time": "2021-01-09T07:17:34.704560Z",
+     "start_time": "2021-01-09T07:17:34.693623Z"
     }
    },
    "outputs": [
@@ -4077,7 +4077,7 @@
        "4459     21            0.0        3.2      76.76      -2.0      0.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4088,11 +4088,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.462679Z",
-     "start_time": "2020-12-27T14:34:50.443731Z"
+     "end_time": "2021-01-09T07:17:34.720517Z",
+     "start_time": "2021-01-09T07:17:34.706585Z"
     }
    },
    "outputs": [
@@ -4184,7 +4184,7 @@
        "292     2            0.0        1.7      52.63      -5.5         0.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4195,11 +4195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.483621Z",
-     "start_time": "2020-12-27T14:34:50.465669Z"
+     "end_time": "2021-01-09T07:17:34.736474Z",
+     "start_time": "2021-01-09T07:17:34.722513Z"
     }
    },
    "outputs": [
@@ -4291,7 +4291,7 @@
        "292     2            0.0        1.7      52.63      -5.5         0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4302,11 +4302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.494622Z",
-     "start_time": "2020-12-27T14:34:50.488616Z"
+     "end_time": "2021-01-09T07:17:34.747448Z",
+     "start_time": "2021-01-09T07:17:34.738470Z"
     }
    },
    "outputs": [],
@@ -4316,11 +4316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.637237Z",
-     "start_time": "2020-12-27T14:34:50.496586Z"
+     "end_time": "2021-01-09T07:17:34.881088Z",
+     "start_time": "2021-01-09T07:17:34.750437Z"
     }
    },
    "outputs": [],
@@ -4345,11 +4345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:34:50.648183Z",
-     "start_time": "2020-12-27T14:34:50.640203Z"
+     "end_time": "2021-01-09T07:17:34.888104Z",
+     "start_time": "2021-01-09T07:17:34.883083Z"
     }
    },
    "outputs": [],
@@ -4374,11 +4374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:36:10.988160Z",
-     "start_time": "2020-12-27T14:34:50.653173Z"
+     "end_time": "2021-01-09T07:18:34.303256Z",
+     "start_time": "2021-01-09T07:17:34.893062Z"
     }
    },
    "outputs": [
@@ -5131,7 +5131,7 @@
        "47   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5144,11 +5144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:27.620953Z",
-     "start_time": "2020-12-27T14:36:10.992231Z"
+     "end_time": "2021-01-09T07:22:50.586737Z",
+     "start_time": "2021-01-09T07:18:34.306247Z"
     }
    },
    "outputs": [
@@ -6013,7 +6013,7 @@
        "47    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6026,11 +6026,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:27.742625Z",
-     "start_time": "2020-12-27T14:41:27.627932Z"
+     "end_time": "2021-01-09T07:22:50.661538Z",
+     "start_time": "2021-01-09T07:22:50.588732Z"
     }
    },
    "outputs": [
@@ -6699,7 +6699,7 @@
        "47   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6710,11 +6710,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:27.836373Z",
-     "start_time": "2020-12-27T14:41:27.756587Z"
+     "end_time": "2021-01-09T07:22:50.710409Z",
+     "start_time": "2021-01-09T07:22:50.668551Z"
     }
    },
    "outputs": [
@@ -6905,7 +6905,7 @@
        "[3888 rows x 9 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6916,11 +6916,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:27.851332Z",
-     "start_time": "2020-12-27T14:41:27.842369Z"
+     "end_time": "2021-01-09T07:22:50.719398Z",
+     "start_time": "2021-01-09T07:22:50.714397Z"
     }
    },
    "outputs": [
@@ -6938,11 +6938,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.067755Z",
-     "start_time": "2020-12-27T14:41:27.858314Z"
+     "end_time": "2021-01-09T07:22:50.828107Z",
+     "start_time": "2021-01-09T07:22:50.721380Z"
     }
    },
    "outputs": [
@@ -7158,7 +7158,7 @@
        "[7776 rows x 10 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7171,11 +7171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.221344Z",
-     "start_time": "2020-12-27T14:41:28.079725Z"
+     "end_time": "2021-01-09T07:22:50.920850Z",
+     "start_time": "2021-01-09T07:22:50.836074Z"
     }
    },
    "outputs": [
@@ -7943,7 +7943,7 @@
        "47   0.00  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7954,11 +7954,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.363006Z",
-     "start_time": "2020-12-27T14:41:28.227328Z"
+     "end_time": "2021-01-09T07:22:50.992655Z",
+     "start_time": "2021-01-09T07:22:50.922846Z"
     }
    },
    "outputs": [
@@ -8726,7 +8726,7 @@
        "95    0.00    0.00  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8737,11 +8737,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.369987Z",
-     "start_time": "2020-12-27T14:41:28.365998Z"
+     "end_time": "2021-01-09T07:22:51.003627Z",
+     "start_time": "2021-01-09T07:22:50.998650Z"
     }
    },
    "outputs": [],
@@ -8753,11 +8753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.516596Z",
-     "start_time": "2020-12-27T14:41:28.374975Z"
+     "end_time": "2021-01-09T07:22:51.070446Z",
+     "start_time": "2021-01-09T07:22:51.007615Z"
     }
    },
    "outputs": [
@@ -9525,7 +9525,7 @@
        "95    0.00    0.00  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9536,11 +9536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:28.765929Z",
-     "start_time": "2020-12-27T14:41:28.519587Z"
+     "end_time": "2021-01-09T07:22:51.171203Z",
+     "start_time": "2021-01-09T07:22:51.072440Z"
     }
    },
    "outputs": [],
@@ -9550,11 +9550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:36.714680Z",
-     "start_time": "2020-12-27T14:41:28.769919Z"
+     "end_time": "2021-01-09T07:22:57.510231Z",
+     "start_time": "2021-01-09T07:22:51.173172Z"
     }
    },
    "outputs": [
@@ -9594,21 +9594,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-27T14:41:36.998459Z",
-     "start_time": "2020-12-27T14:41:36.716674Z"
+     "end_time": "2021-01-09T07:22:57.757570Z",
+     "start_time": "2021-01-09T07:22:57.511261Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ce0be3e288>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e8a1b0c588>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9628,34 +9628,6 @@
    "source": [
     "train['TARGET'].plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
